--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     background-size: cover; 
 }
 .A img{
-    width: 20%;
+    width: 30%;
     /* padding: 15px ; */
 }
 .B ul{
@@ -27,7 +27,7 @@ body{
 .B ul li a{
   display: block;
   text-decoration: none;
-    padding: 0px 20px;
+    padding: 5px 15px;
     color:white;
     font-size: 20px;
 }
@@ -42,8 +42,7 @@ body{
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color:black;
     overflow-x: hidden;
     transition: 0.5s;
   }
@@ -57,7 +56,7 @@ body{
     padding: 8px;
     text-decoration: none;
     font-size: 15px;
-    color: #818181;
+    color: white;
     display: block;
     transition: 0.3s;
   }
@@ -66,9 +65,9 @@ body{
   }
   .overlay .closebtn {
     position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
+    top: 10px;
+    left: 5px;
+    font-size: 40px;
   }
   .mm{
     display: none;
@@ -106,8 +105,17 @@ body{
   text-decoration: none;
   color: white;
 }
+.block1{
+  margin-top: 100px;
+}
  .blo{
-  position:sticky;
+  position:fixed;
   top: 0;
   left: 0;
+}
+.container{
+  overflow: hidden;
 } 
+hr{
+  border: 2px solid white;
+}
